--- a/android/lib/resource/src/main/res/values/strings.xml
+++ b/android/lib/resource/src/main/res/values/strings.xml
@@ -385,4 +385,8 @@
     <string name="failed_to_set_current_unknown_error">Failed to set to current - Unknown reason</string>
     <string name="location_was_removed_from_list">%s was removed from \"%s\"</string>
     <string name="create_custom_list_message">\"%s\" was created</string>
+    <string name="split_tunneling_disabled_description">Split tunneling is disabled.</string>
+    <string name="use_material_you">Use material you theme</string>
+    <string name="use_dark_theme">Use dark theme</string>
+    <string name="use_system_setting">Use system setting</string>
 </resources>
