--- a/gui/changes.txt
+++ b/gui/changes.txt
@@ -1,3 +1,3 @@
-[macOS] Added split tunneling, allowing selected apps to be excluded from the VPN tunnel (beta).
+[macOS] Added split tunneling, allowing selected apps to be excluded from the VPN tunnel.
 [Windows] Fix a crash while disconnecting when DAITA is used.
 Added option to use a custom bridge with OpenVPN.
